优化，添加了ST表和01Trie树

--- a/板子.md
+++ b/板子.md
@@ -40,6 +40,8 @@ int main() {
   - [无旋Treap](#无旋treap)
   - [树的倍增数组](#树的倍增算法)
   - [树链剖分](#树链剖分)
+  - [ST表](#st表)
+  - [01-Trie](#01-trie)
   - [CDQ分治](#CDQ分治)
   - [莫队](#莫队)
   - [单调栈、单调队列](#单调栈单调队列)
@@ -156,85 +158,97 @@ done
 ### 线段树
 ```c++
 struct SegTree {
-	const int n;
+	int n;
 	SegTree(const vector<ll> &v)
-		: n(v.size()), s(v.size() * 4), l(v.size() * 4) {
-		_b(v, 0, 0, n);
+		: n(v.size()), sum(v.size() * 4), lazy(v.size() * 4, 0) {
+		_build(v, 0, 0, n);
 	}
-	SegTree(int sz) : n(sz), s(sz * 4, 0), l(sz * 4, 0) {}
-	ll query(int l, int r) {
+	SegTree(int sz) : n(sz), sum(sz * 4, 0), lazy(sz * 4, 0) {}
+	SegTree() : n(0) {}
+	void assign(int sz) {
+		n = sz;
+		sum.assign(n * 4, 0);
+		lazy.assign(n * 4, 0);
+	}
+	void assign(const vector<ll> &v) {
+		n = v.size();
+		sum.assign(v.size() * 4, 0);
+		lazy.assign(v.size() * 4, 0);
+		_build(v, 0, 0, n);
+	}
+	ll query(int l, int r) const {
 		if(l == r) return 0;
-		return _q(l, r, 0, 0, n);
+		return _query(l, r, 0, 0, n);
 	}
-	void update(int l, int r, ll d) {
+	void update(int l, int r, ll dval) {
 		if(l == r) return;
-		_u(l, r, d, 0, 0, n);
+		_update(l, r, dval, 0, 0, n);
 	}
 private:
-	vector<ll> s, l;
-	void _b(const vector<ll> &v, int r, int rl, int rr) {
+	void _build(const vector<ll> &v, int r, int rl, int rr) {
 		if(rr - rl == 1) {
-			s[r] = v[rl];
+			sum[r] = v[rl];
 			return;
 		}
 		int m = (rl + rr) / 2;
-		_b(v, r * 2 + 1, rl, m);
-		_b(v, r * 2 + 2, m, rr);
-		s[r] = s[r * 2 + 1] + s[r * 2 + 2];
+		_build(v, r * 2 + 1, rl, m);
+		_build(v, r * 2 + 2, m, rr);
+		sum[r] = sum[r * 2 + 1] + sum[r * 2 + 2];
 	}
-	void _pd(int r, int rl, int rr) {
-		if(l[r] == 0) return;
+	void _pushdown(int root, int rl, int rr) const {
+		if(lazy[root] == 0) return;
 		int m = (rl + rr) / 2;
-		s[r * 2 + 1] += l[r] * (m - rl);
-		l[r * 2 + 1] += l[r];
-		s[r * 2 + 2] += l[r] * (rr - m);
-		l[r * 2 + 2] += l[r];
-		l[r] = 0;
+		sum[root * 2 + 1] += lazy[root] * (m - rl);
+		lazy[root * 2 + 1] += lazy[root];
+		sum[root * 2 + 2] += lazy[root] * (rr - m);
+		lazy[root * 2 + 2] += lazy[root];
+		lazy[root] = 0;
 	}
-	ll _q(int ql, int qr, int r, int rl, int rr) {
-		if(ql <= rl && qr >= rr) return s[r];
-		_pd(r, rl, rr);
-		int m = (rl + rr) / 2;
+	ll _query(int ql, int qr, int root, int rl, int rr) const {
+		if(ql <= rl && qr >= rr) return sum[root];
+		_pushdown(root, rl, rr);
+		int mid = (rl + rr) / 2;
 		ll ans = 0;
-		if(ql < m) {
-			ans += _q(ql, qr, r * 2 + 1, rl, m);
+		if(ql < mid) {
+			ans += _query(ql, qr, root * 2 + 1, rl, mid);
 		}
-		if(qr > m) {
-			ans += _q(ql, qr, r * 2 + 2, m, rr);
+		if(qr > mid) {
+			ans += _query(ql, qr, root * 2 + 2, mid, rr);
 		}
 		return ans;
 	}
 	// 区间修改
-	void _u(int ul, int ur, ll d, int r, int rl, int rr) {
+	void _update(int ul, int ur, ll dv, int root, int rl, int rr) {
 		if(ul <= rl && ur >= rr) {
-			s[r] += d * (rr - rl);
-			l[r] += d;
+			sum[root] += dv * (rr - rl);
+			lazy[root] += dv;
 			return;
 		}
-		_pd(r, rl, rr);
-		int m = (rl + rr) / 2;
-		if(ul < m) {
-			_u(ul, ur, d, r * 2 + 1, rl, m);
+		_pushdown(root, rl, rr);
+		int mid = (rl + rr) / 2;
+		if(ul < mid) {
+			_update(ul, ur, dv, root * 2 + 1, rl, mid);
 		}
-		if(ur > m) {
-			_u(ul, ur, d, r * 2 + 2, m, rr);
+		if(ur > mid) {
+			_update(ul, ur, dv, root * 2 + 2, mid, rr);
 		}
-		s[r] = s[r * 2 + 1] + s[r * 2 + 2];
+		sum[root] = sum[root * 2 + 1] + sum[root * 2 + 2];
 	}
 	// 单点修改
-	void __u(int x, ll v, int r, int rl, int rr) {
+	void __update(int x, ll v, int root, int rl, int rr) {
 		if(rl == rr - 1) {
-			s[r] += v;
+			sum[root] += v;
 			return;
 		}
-		int m = (rl + rr) / 2;
-		if(x < m) {
-			__u(x, v, r * 2 + 1, rl, m);
+		int mid = (rl + rr) / 2;
+		if(x < mid) {
+			__update(x, v, root * 2 + 1, rl, mid);
 		} else {
-			__u(x, v, r * 2 + 2, m, rr);
+			__update(x, v, root * 2 + 2, mid, rr);
 		}
-		s[r] = s[r * 2 + 1] + s[r * 2 + 2];
+		sum[root] = sum[root * 2 + 1] + sum[root * 2 + 2];
 	}
+	mutable vector<ll> sum, lazy;
 };
 ```
 
@@ -631,6 +645,7 @@ private:
 
 ### 无旋Treap
 ```c++
+constexpr int inf = 0x3f3f3f3f;
 struct Treap {
 	Treap() : rt(nullptr) {}
 	~Treap() {
@@ -667,24 +682,30 @@ struct Treap {
 		}
 		rt = _merge(l.first, tmp.second);
 	}
-	// 注意1-based
-	int qrv(int v) {
+	// 注意0-based
+	int qrv(int v) const {
 		return _qrv(rt, v);
 	}
-	// 注意1-based
-	int qvr(int r) {
+	// 注意0-based
+	int qvr(int r) const {
 		return _qvr(rt, r);
 	}
-	// 注意是小于的，而不是大于等于的
-	int lower_bound(int v) {
+	// 注意是小于的，不是大于等于的
+	int lower_bound(int v) const {
 		auto tmp = _sval(rt, v - 1);
-		int ret = _qvr(tmp.first, tmp.first->size);
+		int ret = -inf;
+		if(tmp.first) {
+			ret = _qvr(tmp.first, tmp.first->size - 1);
+		}
 		rt = _merge(tmp.first, tmp.second);
 		return ret;
 	}
-	int upper_bound(int v) {
+	int upper_bound(int v) const {
 		auto tmp = _sval(rt, v);
-		int ret = _qvr(tmp.second, 1);
+		int ret = -inf;
+		if(tmp.second) {
+			ret = _qvr(tmp.second, 0);
+		}
 		rt = _merge(tmp.first, tmp.second);
 		return ret;
 	}
@@ -695,8 +716,9 @@ private:
 		int size;
 		int prio;
 		Node *left, *right;
+		static inline random_device rnd{};
 		Node(int v)
-			: val(v), cnt(1), size(1), prio(random_device{}()), left(nullptr), right(nullptr) {}
+			: val(v), cnt(1), size(1), prio(rnd()), left(nullptr), right(nullptr) {}
 		void usize() {
 			size = cnt;
 			if(left) {
@@ -707,7 +729,7 @@ private:
 			}
 		}
 	};
-	Node *rt;
+	mutable Node *rt;
 	static void _dtor(Node *ptr) {
 		if(ptr->left) {
 			_dtor(ptr->left);
@@ -738,13 +760,14 @@ private:
 	static tuple<Node *, Node *, Node *> _srnk(Node *const ptr, int rnk) {
 		if(!ptr) return { nullptr, nullptr, nullptr };
 		int lsize = (ptr->left ? ptr->left->size : 0);
-		if(rnk <= lsize) {
+		if(rnk < lsize) {
 			auto [lptr, mptr, rptr] = _srnk(ptr->left, rnk);
 			ptr->left = rptr;
 			ptr->usize();
 			return { lptr, mptr, ptr };
-		} else if(rnk <= lsize + ptr->cnt) {
-			auto lptr = ptr->left, rptr = ptr->right;
+		} else if(rnk < lsize + ptr->cnt) {
+			Node *lptr = ptr->left;
+			Node *rptr = ptr->right;
 			ptr->left = ptr->right = nullptr;
 			return { lptr, ptr, rptr };
 		} else {
@@ -767,14 +790,14 @@ private:
 			return v;
 		}
 	}
-	int _qrv(Node *const ptr, int val) {
+	int _qrv(Node *const ptr, int val) const {
 		auto [l, r] = _sval(ptr, val - 1);
-		int ret = (l == nullptr ? 0 : l->size) + 1;
+		int ret = (l ? l->size : 0);
 		rt = _merge(l, r);
 		return ret;
 	}
-	int _qvr(Node *const ptr, int rnk) {
-		auto [lptr, mptr, rptr] = _srnk(ptr, rnk);
+	int _qvr(Node *const ptr, int r) const {
+		auto [lptr, mptr, rptr] = _srnk(ptr, r);
 		int ret = mptr->val;
 		rt = _merge(_merge(lptr, mptr), rptr);
 		return ret;
@@ -946,21 +969,92 @@ private:
 };
 ```
 
+### ST表
+```c++
+template<class T> struct Sparse {
+	using func_type = function<T(T, T)>;
+	Sparse(const vector<T> &vec, func_type fn) : func(fn) {
+		int n = vec.size();
+		_log.resize(n + 1);
+		_log[0] = -1;
+		for(int i = 1; i <= n; ++i) {
+			_log[i] = _log[i >> 1] + 1;
+		}
+		int k = _log[n] + 1;
+		table.resize(n, vector<T>(k));
+		for(int i = 0; i < n; ++i) {
+			table[i][0] = vec[i];
+		}
+		for(int j = 1; j < k; ++j) {
+			int step = 1 << (j - 1);
+			for(int i = 0; i + step < n; ++i) {
+				table[i][j] = func(table[i][j - 1], table[i + step][j - 1]);
+			}
+		}
+	}
+	T query(int l, int r) const {
+		int len = r - l + 1;
+		int j = _log[len];
+		return func(table[l][j], table[r - (1 << j) + 1][j]);
+	}
+private:
+	vector<vector<T>> table;
+	vector<int> _log;
+	func_type func;
+};
+```
+
+### 01-Trie
+```c++
+struct Trie01 {
+	Trie01() : nodes(1) {}
+	void insert(ll val) {
+		int now = 0;
+		for(ll i = 62; i >= 0; --i) {
+			ll flag = (val >> i) & 1;
+			if(nodes[now].nxt[flag] == -1) {
+				nodes[now].nxt[flag] = nodes.size();
+				nodes.emplace_back();
+			}
+			now = nodes[now].nxt[flag];
+		}
+	}
+	ll qmax_xor(ll val) const {
+		int now = 0;
+		ll ans = 0;
+		for(ll i = 62; i >= 0; --i) {
+			ll flag = (val >> i) & 1;
+			if(nodes[now].nxt[1 ^ flag] != -1) {
+				ans += (1ll << i);
+				now = nodes[now].nxt[1 ^ flag];
+			} else {
+				now = nodes[now].nxt[flag];
+			}
+		}
+		return ans;
+	}
+private:
+	static constexpr int height = 63;
+	struct Node {
+		int nxt[2];
+		Node() {
+			nxt[0] = nxt[1] = -1;
+		}
+	};
+	vector<Node> nodes;
+};
+```
+
 ### CDQ分治
 ```c++
 struct Data {
 	int x, y, z;
 	int cnt;
 	int ans;
+	Data(int x_, int y_, int z_) : x(x_), y(y_), z(z_), cnt(1), ans(-1) {}
 };
-inline void kiana_1() noexcept {
-	int n, k;
-	cin >> n >> k;
+vector<int> threed_partial(int n, int k, vector<Data> &_datas) {
 	Fenwick fwk(k);
-	vector<Data> _datas(n + 1, Data{ -1, -1, -1, 1 });
-	for(int i = 0; i < n; ++i) {
-		cin >> _datas[i].x >> _datas[i].y >> _datas[i].z;
-	}
 	sort(_datas.begin(), _datas.end() - 1, [](const Data &l, const Data &r) {
 		if(l.x != r.x) return l.x < r.x;
 		if(l.y != r.y) return l.y < r.y;
@@ -975,7 +1069,7 @@ inline void kiana_1() noexcept {
 		if((_datas[i].x != _datas[i + 1].x) ||
 			(_datas[i].y != _datas[i + 1].y) ||
 			(_datas[i].z != _datas[i + 1].z)) {
-			datas.emplace_back(Data{ _datas[i].x, _datas[i].y, _datas[i].z, cnt });
+			datas.emplace_back(_datas[i].x, _datas[i].y, _datas[i].z);
 			cnt = 0;
 		}
 	}
@@ -1012,9 +1106,7 @@ inline void kiana_1() noexcept {
 	for(int i = 0; i < m; ++i) {
 		ans[datas[i].ans + datas[i].cnt - 1] += datas[i].cnt;
 	}
-	for(int i : ans) {
-		cout << i << '\n';
-	}
+	return ans;
 }
 ```
 
