添加了几个字符串算法

--- a/板子.md
+++ b/板子.md
@@ -42,7 +42,7 @@ int main() {
   - [树链剖分](#树链剖分)
   - [ST表](#st表)
   - [01-Trie](#01-trie)
-  - [CDQ分治](#CDQ分治)
+  - [CDQ分治](#cdq分治)
   - [莫队](#莫队)
   - [单调栈、单调队列](#单调栈单调队列)
 - [图论](#图论)
@@ -84,6 +84,8 @@ int main() {
   - [KMP](#kmp)
   - [Z函数/扩展KMP](#z函数扩展kmp)
   - [字典树](#字典树)
+  - [Manacher](#manacher)
+  - [AC自动机](#ac自动机)
 - [贪心](#贪心)
   - [一组交叉直线经过所有点](#一组交叉直线经过所有点) 
 - [二分](#二分)
@@ -314,112 +316,6 @@ private:
 		}
 	}
 };
-/*
-struct PST {
-	PST() : node_cnt(0), len(0) {}
-	PST(const vector<ll> &a) {
-		build(a);
-	}
-	void build(const vector<ll> &a) {
-		ys = a;
-		ind = a;
-		sort(ind.begin(), ind.end());
-		ind.erase(unique(ind.begin(), ind.end()), ind.end());
-		len = ind.size();
-		node_cnt = 0;
-		ll n = a.size();
-		sum.assign(n * 50, 0);
-		lson.assign(n * 50, 0);
-		rson.assign(n * 50, 0);
-		roots.assign(n + 1, 0);
-		roots[0] = _build(0, len - 1);
-		for(ll i = 1; i <= n; i++) {
-			roots[i] = _update(_getid(a[i - 1]), 0, len - 1, roots[i - 1]);
-		}
-	}
-	// 查询区间第k小
-	ll qmink(int L, int R, int k) {
-		return ind[_query(0, len - 1, roots[L - 1], roots[R], k)];
-	}
-	// 查询区间第k大
-	ll qmaxk(int L, int R, int k) {
-		int n = R - L + 1;
-		return qmink(L, R, n - k + 1);
-	}
-	// 查询前缀[1,pos]中小于x的元素个数
-	ll qltx(int pos, ll x) {
-		int idx = _getid(x + 1) - 1; // 离散化位置
-		if(roots[pos] == 0 || idx < 0) return 0;
-		return _getcnt(roots[pos], 0, len - 1, idx);
-	}
-	// 查询区间[L,R]中值在[l_val, r_val]的元素个数
-	ll qcnt(int L, int R, ll l_val, ll r_val) {
-		ll r_high = qltx(R, r_val);
-		ll r_low = qltx(R, l_val - 1);
-		ll l_high = qltx(L - 1, r_val);
-		ll l_low = qltx(L - 1, l_val - 1);
-		return (r_high - r_low) - (l_high - l_low);
-	}
-
-private:
-	vector<ll> ind;		// 离散化数组
-	vector<ll> ys;		// 原始数组
-	vector<ll> sum;		// 节点计数
-	vector<ll> lson;	// 左子节点索引
-	vector<ll> rson;	// 右子节点索引
-	vector<ll> roots;	// 各版本根节点
-	ll len;				// 离散值域大小
-	ll node_cnt;		// 节点总数
-	// 获取离散化下标
-	ll _getid(ll x) {
-		return lower_bound(ind.begin(), ind.end(), x) - ind.begin();
-	}
-	// 构建空树
-	ll _build(ll l, ll r) {
-		ll id = ++node_cnt;
-		if(l == r) return id;
-		ll mid = (l + r) >> 1;
-		lson[id] = _build(l, mid);
-		rson[id] = _build(mid + 1, r);
-		return id;
-	}
-	// 更新树版本
-	ll _update(ll pos, ll l, ll r, ll pre) {
-		ll id = ++node_cnt;
-		lson[id] = lson[pre];
-		rson[id] = rson[pre];
-		sum[id] = sum[pre] + 1;
-		if(l == r) return id;
-		ll mid = (l + r) >> 1;
-		if(pos <= mid)
-			lson[id] = _update(pos, l, mid, lson[pre]);
-		else
-			rson[id] = _update(pos, mid + 1, r, rson[pre]);
-		return id;
-	}
-
-	// 查询第k小
-	ll _query(ll l, ll r, ll L_id, ll R_id, ll k) {
-		if(l == r) return l;
-		ll mid = (l + r) >> 1;
-		ll left_count = sum[lson[R_id]] - sum[lson[L_id]];
-		if(left_count >= k)
-			return _query(l, mid, lson[L_id], lson[R_id], k);
-		else
-			return _query(mid + 1, r, rson[L_id], rson[R_id], k - left_count);
-	}
-
-	// 计算值<=x的元素个数
-	ll _getcnt(ll id, ll l, ll r, ll x) {
-		if(l == r) return sum[id];
-		ll mid = (l + r) >> 1;
-		if(x <= mid)
-			return _getcnt(lson[id], l, mid, x);
-		else
-			return sum[lson[id]] + _getcnt(rson[id], mid + 1, r, x);
-	}
-};
-*/
 ```
 
 ### 树状数组（单点、区间）
@@ -590,11 +486,14 @@ struct DSU {
 	DSU(int n) : fa(n), rk(n, 1) {
 		iota(fa.begin(), fa.end(), 0);
 	}
-	int find(int x) {
+	int find(int x) const {
 		if(fa[x] != x) {
 			fa[x] = find(fa[x]);
 		}
 		return fa[x];
+	}
+	bool is_connected(int x, int y) const {
+		return find(x) == find(y);
 	}
 	void connect(int x, int y) {
 		x = find(x);
@@ -608,24 +507,21 @@ struct DSU {
 		}
 		fa[y] = x;
 	}
-	bool is_connected(int x, int y) {
-		return find(x) == find(y);
-	}
 private:
-	vector<int> fa, rk;
+	mutable vector<int> fa, rk;
 };
 // 随机合并
 struct DSU_Random {
 	DSU_Random(int n) : fa(n) {
 		iota(fa.begin(), fa.end(), 0);
 	}
-	int find(int x) {
+	int find(int x) const {
 		if(fa[x] != x) {
 			fa[x] = find(fa[x]);
 		}
 		return fa[x];
 	}
-	bool is_connected(int x, int y) {
+	bool is_connected(int x, int y) const {
 		return find(x) == find(y);
 	}
 	void connect(int x, int y) {
@@ -639,7 +535,7 @@ struct DSU_Random {
 private:
 	static inline mt19937 rnd{ (unsigned int)chrono::steady_clock::now()
 		.time_since_epoch().count() };
-	vector<int> fa;
+	mutable vector<int> fa;
 };
 ```
 
@@ -1628,13 +1524,7 @@ private:
 ### 同余最短路
 ```c++
 // 跑的dijkstra
-inline void kiana_1() noexcept {
-	ll k;
-	vector<ll> dist(4);
-	cin >> k;
-	for(int i = 0; i < 4; ++i) {
-		cin >> dist[i];
-	}
+ll remainder_mindist(ll k, vector<ll> dist) {
 	ll modulo = 2 * min(dist[0], dist[3]);
 	vector<vector<ll>> dp(4, vector<ll>(modulo, inf));
 	vector<vector<bool>> visited(4, vector<bool>(modulo, false));
@@ -1672,7 +1562,7 @@ inline void kiana_1() noexcept {
 		}
 		chkmin(ans, max(required, dp[0][i]));
 	}
-	cout << ans << '\n';
+	return ans;
 }
 ```
 
@@ -2541,8 +2431,7 @@ private:
 
 ### 矩阵乘法和快速幂
 ```c++
-template<class T>
-vector<vector<T>> matmul(const vector<vector<T>> &lhs, const vector<vector<T>> &rhs) {
+template<class T> vector<vector<T>> matmul(const vector<vector<T>> &lhs, const vector<vector<T>> &rhs) {
 	int M = lhs.size(), N = lhs[0].size(), P = rhs[0].size();
 	vector<vector<T>> ret(M, vector<T>(P, 0));
 	for(int i = 0; i < M; ++i) {
@@ -2554,8 +2443,7 @@ vector<vector<T>> matmul(const vector<vector<T>> &lhs, const vector<vector<T>> &
 	}
 	return ret;
 }
-template<class T>
-vector<vector<T>> matpow(vector<vector<T>> mat, ll N) {
+template<class T> vector<vector<T>> matpow(vector<vector<T>> mat, ll N) {
 	int M = mat.size();
 	vector<vector<T>> ret(M, vector<T>(M, 0));
 	for(int i = 0; i < M; ++i) {
@@ -2834,6 +2722,210 @@ private:
 		}
 	}
 };
+```
+
+### Manacher
+```c++
+string manacher(const string &_s) {
+	string s = "$";
+	for(char ch : _s) {
+		s += ch;
+		s += '$';
+	}
+	int n = s.size();
+	int max_right = 0;
+	int center = 0;
+	vector<int> dp(n, 0);
+	auto expand = [&](int left, int right) {
+		while(left >= 0 && right < n && s[left] == s[right]) {
+			--left;
+			++right;
+		}
+		return (right - left) / 2;
+	};
+	for(int i = 0; i < n; ++i) {
+		int mirror = 2 * center - i;
+		if(i >= max_right) {
+			dp[i] = expand(i, i);
+			max_right = i + dp[i];
+			center = i;
+		} else if(dp[mirror] == max_right - i) {
+			dp[i] = expand(i - dp[mirror], i + dp[mirror]);
+			max_right = i + dp[i];
+			center = i;
+		} else {
+			dp[i] = min(dp[mirror], max_right - i);
+		}
+	}
+	auto it = max_element(dp.begin(), dp.end());
+	int id = it - dp.begin(), len = *it;
+	string ret;
+	for(int i = id - len + 1; i < id + len; ++i) {
+		if(s[i] != '$') {
+			ret += s[i];
+		}
+	}
+	return ret;
+}
+```
+
+### AC自动机
+```c++
+struct ACAM {
+	ACAM() : nodes(1) {}
+	void insert(const string &str) {
+		int now = 0;
+		for(char ch : str) {
+			int id = ch - 'a';
+			int v = nodes[now].nxt1[id];
+			if(v == -1) {
+				v = nodes[now].nxt1[id] = nodes[now].nxt2[id] = nodes.size();
+				nodes.emplace_back();
+			}
+			now = v;
+		}
+		nodes[now].cnt++;
+	}
+	void build() {
+		queue<int> q;
+		nodes[0].fail = 0;
+		for(int i = 0; i < 26; ++i) {
+			int v = nodes[0].nxt2[i];
+			if(v == -1) {
+				nodes[0].nxt2[i] = 0;
+			} else {
+				nodes[v].fail = 0;
+				q.push(v);
+			}
+		}
+		while(!q.empty()) {
+			int now = q.front();
+			q.pop();
+			for(int i = 0; i < 26; ++i) {
+				int v = nodes[now].nxt2[i];
+				if(v == -1) {
+					nodes[now].nxt2[i] = nodes[nodes[now].fail].nxt2[i];
+				} else {
+					nodes[v].fail = nodes[nodes[now].fail].nxt2[i];
+					q.push(v);
+				}
+			}
+		}
+		q.push(0);
+		while(!q.empty()) {
+			int u = q.front();
+			q.pop();
+			for(int i = 0; i < 26; ++i) {
+				int v = nodes[u].nxt1[i];
+				if(v == -1) {
+					continue;
+				}
+				q.push(v);
+				int fu = nodes[u].fail;
+				if(fu != 0 && nodes[fu].cnt == 0) {
+					nodes[u].fail = nodes[fu].fail;
+				}
+			}
+		}
+	}
+	int find(const string &s) const {
+		int now = 0;
+		for(char ch : s) {
+			int v = nodes[now].nxt1[ch - 'a'];
+			if(v == -1) {
+				return -1;
+			}
+			now = v;
+		}
+		return now;
+	}
+	vector<int> query(const string &str) const {
+		int now = 0;
+		vector<int> ret(nodes.size(), 0);
+		for(char ch : str) {
+			int id = ch - 'a';
+			now = nodes[now].nxt2[id];
+			int u = now;
+			while(u != 0) {
+				ret[u]++;
+				u = nodes[u].fail;
+			}
+		}
+		return ret;
+	}
+	int size() const {
+		return nodes.size();
+	}
+private:
+	struct Node {
+		int cnt;
+		int fail;
+		array<int, 26> nxt1, nxt2;
+		Node() : cnt(0), fail(0) {
+			nxt1.fill(-1);
+			nxt2.fill(-1);
+		}
+	};
+	vector<Node> nodes;
+};
+```
+
+### 后缀数组
+```c++
+vector<int> suffix_array(const string &str) {
+	int n = str.size();
+	int m = 128;
+	vector<int> rk(n * 3, -1), sa(n), id(n), cnt(max(n, m), 0);
+	int p = 0;
+	for(int i = 0; i < n; ++i) {
+		rk[i] = str[i];
+		cnt[rk[i]]++;
+	}
+	for(int i = 1; i < m; ++i) {
+		cnt[i] += cnt[i - 1];
+	}
+	for(int i = n - 1; i >= 0; --i) {
+		cnt[rk[i]]--;
+		sa[cnt[rk[i]]] = i;
+	}
+	for(int w = 1; ; w <<= 1, m = p + 1) {
+		int cur = 0;
+		for(int i = n - w; i < n; ++i) {
+			id[cur] = i;
+			++cur;
+		}
+		for(int i = 0; i < n; ++i) {
+			if(sa[i] >= w) {
+				id[cur] = sa[i] - w;
+				++cur;
+			}
+		}
+		cnt.assign(max(n, m), 0);
+		for(int i = 0; i < n; ++i) {
+			cnt[rk[i]]++;
+		}
+		for(int i = 1; i < m; ++i) {
+			cnt[i] += cnt[i - 1];
+		}
+		for(int i = n - 1; i >= 0; --i) {
+			cnt[rk[id[i]]]--;
+			sa[cnt[rk[id[i]]]] = id[i];
+		}
+		p = 0;
+		vector<int> oldrk = rk;
+		rk[sa[0]] = 0;
+		for(int i = 1; i < n; ++i) {
+			if(oldrk[sa[i]] != oldrk[sa[i - 1]] || oldrk[sa[i] + w] != oldrk[sa[i - 1] + w]) {
+				++p;
+			}
+			rk[sa[i]] = p;
+		}
+		if(p == n - 1) {
+			break;
+		}
+	}
+	return sa;
+}
 ```
 
 ## 贪心
@@ -3118,14 +3210,14 @@ private:
 ### 快读
 ```c++
 struct Qread {
-	Qread() : state(true) {}
-	template<integral T> Qread &operator>>(T &val) {
+	Qread() noexcept : state(true) {}
+	template<integral T> Qread &operator>>(T &val) noexcept {
 		if(!state) {
-		    val = 0;
-		    return *this;
+			val = 0;
+			return *this;
 		}
 		T x = 0, f = 1;
-		char ch = getchar();
+		char ch = cin.rdbuf()->sbumpc();
 		while(ch < '0' || ch > '9') {
 			if(ch == EOF) {
 				state = false;
@@ -3135,21 +3227,39 @@ struct Qread {
 			if(ch == '-') {
 				f = -1;
 			}
-			ch = getchar();
+			ch = cin.rdbuf()->sbumpc();
 		}
 		while(ch >= '0' && ch <= '9') {
 			x = x * 10 + ch - '0';
-			ch = getchar();
+			ch = cin.rdbuf()->sbumpc();
 		}
 		val = x * f;
 		return *this;
 	}
-	explicit operator bool() const {
+	explicit operator bool() const noexcept {
 		return state;
 	}
 private:
 	bool state;
 };
 Qread qread;
+```
+
+### 自定义哈希
+```c++
+struct MyHash {
+	size_t operator()(ll x) const noexcept {
+		x ^= (x >> 21);
+		x ^= (x << 37);
+		x ^= (x >> 4);
+		x *= 0x27d4eb2f165667c5;
+		x ^= (x >> 28);
+		x *= 0x165667b19e3779f9;
+		x ^= (x >> 31);
+		return x ^ c;
+	}
+private:
+	static inline size_t c = (size_t)chrono::steady_clock::now().time_since_epoch().count();
+};
 ```
 
