--- a/板子.md
+++ b/板子.md
@@ -2928,6 +2928,30 @@ vector<int> suffix_array(const string &str) {
 }
 ```
 
+### Height数组
+```cpp
+vector<int> height(const string &str) {
+	int n = str.size();
+	vector<int> sa = suffix_array(str), rk(n), h(n);
+	for(int i = 0; i < n; ++i) {
+		rk[sa[i]] = i;
+	}
+	for(int i = 0, k = 0; i < n; ++i) {
+		if(rk[i] == 0) {
+			continue;
+		}
+		if(k > 0) {
+			--k;
+		}
+		while(str[i + k] == str[sa[rk[i] - 1] + k]) {
+			++k;
+		}
+		h[rk[i]] = k;
+	}
+	return h;
+}
+```
+
 ## 贪心
 ### 一组交叉直线经过所有点
 ```c++
