写了个新高精，用fft加速高精乘法；写了个权值线段树

--- a/板子.md
+++ b/板子.md
@@ -32,6 +32,7 @@ int main() {
   - [对拍器](#对拍器)
 - [数据结构](#数据结构)
   - [线段树](#线段树)
+  - [权值线段树](#权值线段树)
   - [主席树](#主席树)
   - [树状数组](#树状数组单点区间)
   - [差分数组](#差分数组)
@@ -86,6 +87,8 @@ int main() {
   - [字典树](#字典树)
   - [Manacher](#manacher)
   - [AC自动机](#ac自动机)
+  - [后缀数组](#后缀数组)
+  - [Height数组](#height数组)
 - [贪心](#贪心)
   - [一组交叉直线经过所有点](#一组交叉直线经过所有点) 
 - [二分](#二分)
@@ -95,6 +98,7 @@ int main() {
 - [杂项](#杂项)
   - [高精](#高精)
   - [快读](#快读)
+  - [自定义哈希](#自定义哈希)
 
 ---
 
@@ -251,6 +255,87 @@ private:
 		sum[root] = sum[root * 2 + 1] + sum[root * 2 + 2];
 	}
 	mutable vector<ll> sum, lazy;
+};
+```
+
+### 权值线段树
+```c++
+// value segment tree
+struct VST {
+	VST(int maxn) : sum((maxn + 1) * 4), n(maxn + 1) {}
+	VST() : n(0) {}
+	void assign(int maxn) {
+		sum.assign((maxn + 1) * 4, 0);
+		n = maxn + 1;
+	}
+	void insert(int x) {
+		_update(x, 1, 0, 0, n);
+	}
+	void erase(int x) {
+		_update(x, -1, 0, 0, n);
+	}
+	int qpre(int x) const {
+		int rk = qrv(x);
+		return qvr(rk - 1);
+	}
+	int qsuc(int x) const {
+		int rk = qrv(x + 1);
+		return qvr(rk);
+	}
+	int qrv(int x) const {
+		return _query(0, x, 0, 0, n);
+	}
+	int qvr(int k) const {
+		return _qvr(k, 0, 0, n);
+	}
+	int size() const {
+		return sum[0];
+	}
+	int qcnt(int x) const {
+		return _query(x, x + 1, 0, 0, n);
+	}
+	int qrange_cnt(int l, int r) const {
+		return _query(l, r, 0, 0, n);
+	}
+private:
+	vector<int> sum;
+	int n;
+	void _update(int x, int dv, int rt, int rl, int rr) {
+		if(rr - rl == 1) {
+			sum[rt] += dv;
+			return;
+		}
+		int mid = (rl + rr) >> 1, lson = rt * 2 + 1, rson = rt * 2 + 2;
+		if(x < mid) {
+			_update(x, dv, lson, rl, mid);
+		} else {
+			_update(x, dv, rson, mid, rr);
+		}
+		sum[rt] = sum[lson] + sum[rson];
+	}
+	ll _query(int ql, int qr, int rt, int rl, int rr) const {
+		if(ql <= rl && qr >= rr)
+			return sum[rt];
+		int mid = (rl + rr) >> 1, lson = rt * 2 + 1, rson = rt * 2 + 2;
+		ll ans = 0;
+		if(ql < mid) {
+			ans += _query(ql, qr, lson, rl, mid);
+		}
+		if(qr > mid) {
+			ans += _query(ql, qr, rson, mid, rr);
+		}
+		return ans;
+	}
+	int _qvr(int k, int rt, int rl, int rr) const {
+		if(rr - rl == 1)
+			return rl;
+		int mid = (rl + rr) >> 1, lson = rt * 2 + 1, rson = rt * 2 + 2;
+		if(k < sum[lson]) {
+			return _qvr(k, lson, rl, mid);
+		} else {
+			return _qvr(k - sum[lson], rson, mid, rr);
+		}
+	}
 };
 ```
 
@@ -3042,191 +3127,277 @@ int peak(const vector<int> &nums) {
 ## 杂项
 ### 高精
 ```c++
-struct StrNum {
-	StrNum() noexcept : number("0") {}
-	StrNum(long long num) noexcept : number(to_string(num)) {}
-	StrNum(const string &num) noexcept : number(num) {}
-	StrNum(string &&num) noexcept : number(move(num)) {}
-	StrNum operator+(const StrNum &r) const noexcept {
-		return StrNum(move(add(number, r.number)));
+struct HPINT {
+	HPINT() : nums(1, 0), neg(false) {}
+	HPINT(ll val) : neg(false) {
+		if(val < 0) {
+			neg = true;
+			val = -val;
+		}
+		while(val) {
+			int t = val % 10;
+			nums.push_back(t);
+			val /= 10;
+		}
+		if(nums.empty()) {
+			nums = vector<int>(1, 0);
+		}
 	}
-	StrNum &operator+=(const StrNum &r) noexcept {
-		number = move(add(number, r.number));
+	HPINT &operator+=(const HPINT &r) {
+		if(neg) {
+			if(r.neg) {
+				_add(nums, r.nums);
+			} else {
+				if(_cmp(nums, r.nums) == 1) {
+					_sub(nums, r.nums);
+				} else {
+					vector<int> rnums = r.nums;
+					_sub(rnums, nums);
+					nums.swap(rnums);
+					neg = false;
+				}
+			}
+		} else {
+			if(r.neg) {
+				if(_cmp(nums, r.nums) != -1) {
+					_sub(nums, r.nums);
+				} else {
+					vector<int> rnums = r.nums;
+					_sub(rnums, nums);
+					nums.swap(rnums);
+					neg = true;
+				}
+			} else {
+				_add(nums, r.nums);
+			}
+		}
 		return *this;
 	}
-	StrNum operator-(const StrNum &r) const noexcept {
-		return StrNum(move(minus(number, r.number)));
-	}
-	StrNum &operator-=(const StrNum &r) noexcept {
-		number = move(minus(number, r.number));
+	HPINT &operator-=(const HPINT &r) {
+		if(neg) {
+			if(r.neg) {
+				int c = _cmp(nums, r.nums);
+				if(c == 1) {
+					_sub(nums, r.nums);
+				} else {
+					vector<int> rnums = r.nums;
+					_sub(rnums, nums);
+					nums.swap(rnums);
+					neg = false;
+				}
+			} else {
+				_add(nums, r.nums);
+			}
+		} else {
+			if(r.neg) {
+				_add(nums, r.nums);
+			} else {
+				int c = _cmp(nums, r.nums);
+				if(c == -1) {
+					vector<int> rnums = r.nums;
+					_sub(rnums, nums);
+					nums.swap(rnums);
+					neg = true;
+				} else {
+					_sub(nums, r.nums);
+				}
+			}
+		}
 		return *this;
 	}
-	StrNum operator*(const StrNum &r) const noexcept {
-		return StrNum(move(mul(number, r.number)));
-	}
-	StrNum &operator*=(const StrNum &r) noexcept {
-		number = move(mul(number, r.number));
+	HPINT &operator*=(const HPINT &r) {
+		neg ^= r.neg;
+		_mul(nums, r.nums);
 		return *this;
 	}
-	StrNum operator-() const noexcept {
-		if(number[0] == '-') return StrNum(number.substr(1, number.size() - 1));
-		return StrNum('-' + number);
-	}
-	bool operator>(const StrNum &r) const noexcept {
-		return gt(number, r.number);
-	}
-	bool operator<(const StrNum &r) const noexcept {
-		return gt(r.number, number);
-	}
-	bool operator>=(const StrNum &r) const noexcept {
-		return !gt(r.number, number);
-	}
-	bool operator<=(const StrNum &r) const noexcept {
-		return !gt(number, r.number);
-	}
-	bool operator==(const StrNum &r) const noexcept {
-		return number == r.number;
-	}
-	friend ostream &operator<<(ostream &os, const StrNum &r) noexcept {
-		os << r.number;
+	friend ostream &operator<<(ostream &os, const HPINT &hp) {
+		if(hp.neg) {
+			os << '-';
+		}
+		for(int i = hp.nums.size() - 1; i >= 0; --i) {
+			os << hp.nums[i];
+		}
 		return os;
 	}
-	friend istream &operator>>(istream &is, StrNum &r) noexcept {
-		is >> r.number;
+	friend istream &operator>>(istream &is, HPINT &hp) {
+		char ch = is.rdbuf()->sbumpc();
+		while(ch < '0' || ch > '9') {
+			if(ch == '-') {
+				hp.neg = true;
+			}
+			ch = is.rdbuf()->sbumpc();
+		}
+		string buffer;
+		while(ch >= '0' && ch <= '9') {
+			buffer += ch;
+			ch = is.rdbuf()->sbumpc();
+		}
+		hp.nums.resize(buffer.size());
+		int n = buffer.size();
+		for(int i = 0; i < n; ++i) {
+			hp.nums[i] = buffer[n - i - 1] - '0';
+		}
 		return is;
 	}
+	bool operator>(const HPINT &r) const {
+		if(neg != r.neg) {
+			return !neg && r.neg;
+		}
+		int c = _cmp(nums, r.nums);
+		if(neg) {
+			return c == -1;
+		} else {
+			return c == 1;
+		}
+	}
+	bool operator<(const HPINT &r) const {
+		return r > (*this);
+	}
+	bool operator==(const HPINT &r) const {
+		return neg == r.neg && _cmp(nums, r.nums) == 0;
+	}
+	HPINT operator+(const HPINT &r) const {
+		HPINT ret = *this;
+		ret += r;
+		return ret;
+	}
+	HPINT operator-(const HPINT &r) const {
+		HPINT ret = *this;
+		ret -= r;
+		return ret;
+	}
+	HPINT operator*(const HPINT &r) const {
+		HPINT ret = *this;
+		ret *= r;
+		return ret;
+	}
+	bool operator>=(const HPINT &r) const {
+		return !operator<(r);
+	}
+	bool operator<=(const HPINT &r) const {
+		return !operator>(r);
+	}
 private:
-	string number;
-	static bool gt(const string &a, const string &b) noexcept {
-		if(a[0] == b[0] && a[0] == '-') {
-			string suba = a.substr(1, a.size() - 1);
-			string subb = b.substr(1, b.size() - 1);
-			return (gt(subb, suba));
-		}
-		if(a[0] == '-') return false;
-		if(b[0] == '-') return true;
-		if(a.size() > b.size()) return true;
-		if(a.size() < b.size()) return false;
-		int n = a.size();
-		for(int i = 0; i < n; i++) {
-			if(a[i] > b[i]) return true;
-			if(a[i] < b[i]) return false;
-		}
-		return false;
-	}
-	static string add(const string &a, const string &b) noexcept {
-		if(a[0] == '-' && b[0] == '-') {
-			string suba = a.substr(1, a.size() - 1);
-			string subb = b.substr(1, b.size() - 1);
-			return ("-" + add(suba, subb));
-		}
-		if(a[0] == '-') {
-			string suba = a.substr(1, a.size() - 1);
-			return minus(b, suba);
-		}
-		if(b[0] == '-') {
-			string subb = b.substr(1, b.size() - 1);
-			return minus(a, subb);
-		}
-		if(a.size() < b.size()) return add(b, a);
-		string ans;
-		string stra = a, strb = b;
-		ranges::reverse(stra);
-		ranges::reverse(strb);
-		int s = stra.size();
+	vector<int> nums;
+	bool neg;
+	static void _add(vector<int> &a, const vector<int> &b) {
 		int carry = 0;
-		for(int i = 0; i < s; i++) {
-			if(i < strb.size()) {
-				int m = (int)(stra[i] - '0'), n = (int)(strb[i] - '0');
-				int p = m + n + carry;
-				carry = 0;
-				if(p < 10) ans.push_back((char)(p + '0'));
-				else {
-					ans.push_back((char)(p - 10 + '0'));
-					carry = 1;
-				}
-			} else {
-				int m = (int)(stra[i] - '0') + carry;
-				carry = 0;
-				if(m < 10) ans.push_back((char)(m + '0'));
-				else {
-					ans.push_back((char)('0'));
-					carry = 1;
-				}
+		for(int i = 0; i < b.size(); ++i) {
+			if(i >= a.size()) {
+				a.push_back(0);
+			}
+			a[i] += (b[i] + carry);
+			carry = 0;
+			if(a[i] >= 10) {
+				carry = 1;
+				a[i] -= 10;
 			}
 		}
-		if(carry == 1) ans.push_back('1');
-		ranges::reverse(ans);
-		return ans;
+		int i = b.size();
+		while(carry != 0) {
+			if(i >= a.size()) {
+				a.push_back(0);
+			}
+			a[i] += carry;
+			carry = 0;
+			if(a[i] >= 10) {
+				carry = 1;
+				a[i] -= 10;
+			}
+		}
 	}
-	static string mul(const string &a, const string &b) noexcept {
-		if(a == "0" || b == "0") return "0";
-		if(a == "1") return b;
-		if(b == "1") return a;
-		bool negative = (a[0] == '-') ^ (b[0] == '-');
-		string stra = (a[0] == '-') ? a.substr(1) : a;
-		string strb = (b[0] == '-') ? b.substr(1) : b;
-		int n = stra.size();
-		int m = strb.size();
-		vector<int> result(n + m, 0);
-		for(int i = n - 1; i >= 0; --i) {
-			for(int j = m - 1; j >= 0; --j) {
-				int mul = (stra[i] - '0') * (strb[j] - '0');
-				int sum = mul + result[i + j + 1];
-				result[i + j + 1] = sum % 10;
-				result[i + j] += sum / 10;
+	static void _sub(vector<int> &a, const vector<int> &b) {
+		int borrow = 0;
+		for(int i = 0; i < b.size(); ++i) {
+			a[i] -= (borrow + b[i]);
+			borrow = 0;
+			if(a[i] < 0) {
+				a[i] += 10;
+				borrow = 1;
 			}
 		}
-		string ans;
-		for(int num : result) {
-			if(!(ans.empty() && num == 0)) {
-				ans.push_back(num + '0');
+		int i = b.size();
+		while(borrow && i < a.size()) {
+			a[i] -= borrow;
+			borrow = 0;
+			if(a[i] < 0) {
+				a[i] += 10;
+				borrow = 1;
 			}
+			i++;
 		}
-		return negative ? '-' + ans : ans;
+		while(a.size() > 1 && a.back() == 0) {
+			a.pop_back();
+		}
 	}
-	static string minus(const string &a, const string &b) noexcept {
-		if(a == b) return "0";
-		if(b[0] == '-') {
-			string str = b.substr(1, b.size() - 1);
-			return add(a, str);
+	static void _mul(vector<int> &a, const vector<int> &b) {
+		using cd = complex<double>;
+		constexpr double pi = 3.14159265358979323846264338327950288;
+		int n = 1;
+		while(n < (int)(a.size() + b.size())) {
+			n <<= 1;
 		}
-		if(a[0] == '-') {
-			string str = a.substr(1, a.size() - 1);
-			return '-' + add(str, b);
+		vector<cd> fa(n), fb(n);
+		for(int i = 0; i < (int)a.size(); ++i) {
+			fa[i] = a[i];
 		}
-		if(!gt(a, b)) {
-			return '-' + minus(b, a);
+		for(int i = 0; i < (int)b.size(); ++i) {
+			fb[i] = b[i];
 		}
-		string ans = "", stra = a, strb = b;
-		ranges::reverse(stra);
-		ranges::reverse(strb);
-		int s = stra.size();
-		int subtract = 0;
-		for(int i = 0; i < s; i++) {
-			if(i < strb.size()) {
-				int k = stra[i] - strb[i] - subtract;
-				subtract = 0;
-				if(k < 0) {
-					subtract = 1;
-					k += 10;
-				}
-				ans.push_back((char)(k + '0'));
-			} else {
-				int k = stra[i] - subtract - '0';
-				subtract = 0;
-				if(k < 0) {
-					subtract = 1;
-					k += 10;
-				}
-				ans.push_back((char)(k + '0'));
+		auto fft = [](auto &&fft, vector<cd> &f, bool invert) -> void {
+			int n = f.size();
+			if(n == 1)
+				return;
+			vector<cd> f0(n / 2), f1(n / 2);
+			for(int i = 0; i < n / 2; ++i) {
+				f0[i] = f[2 * i];
+				f1[i] = f[2 * i + 1];
 			}
+			fft(fft, f0, invert);
+			fft(fft, f1, invert);
+			double theta = 2 * pi / n * (invert ? -1 : 1);
+			cd wt = 1, w(cos(theta), sin(theta));
+			for(int t = 0; t < n / 2; ++t) {
+				cd u = f0[t], v = wt * f1[t];
+				f[t] = u + v;
+				f[t + n / 2] = u - v;
+				wt *= w;
+			}
+		};
+		fft(fft, fa, false);
+		fft(fft, fb, false);
+		for(int i = 0; i < n; ++i) {
+			fa[i] *= fb[i];
 		}
-		while(ans[ans.size() - 1] == '0') {
-			ans.pop_back();
+		fft(fft, fa, true);
+		a.resize(n);
+		int carry = 0;
+		for(int i = 0; i < n; ++i) {
+			int num = int(fa[i].real() / n + 0.5) + carry;
+			carry = num / 10;
+			a[i] = num % 10;
 		}
-		ranges::reverse(ans);
-		return ans;
+		while(carry) {
+			a.push_back(carry % 10);
+			carry /= 10;
+		}
+		while(a.size() > 1 && a.back() == 0) {
+			a.pop_back();
+		}
+	}
+	// 1 gt, -1 lt, 0 eq
+	static int _cmp(const vector<int> &a, const vector<int> &b) {
+		if(a.size() > b.size())
+			return 1;
+		if(a.size() < b.size())
+			return -1;
+		for(int n = a.size(), i = n - 1; i >= 0; --i) {
+			if(a[i] > b[i])
+				return 1;
+			if(a[i] < b[i])
+				return -1;
+		}
+		return 0;
 	}
 };
 ```
