修复了几个bug，统一了一下码风，增加了两个字符串算法

--- a/板子.md
+++ b/板子.md
@@ -2871,6 +2871,55 @@ struct ACAM {
 		}
 		nodes[now].cnt++;
 	}
+	// 不优化的，对于某些特定的题需要
+	// void build() {
+	//	queue<int> q;
+	//	nodes[0].fail = 0;
+	//	for(int i = 0; i < 26; ++i) {
+	//		if(nodes[0].nxt[i] != -1) {
+	//			int v = nodes[0].nxt[i];
+	//			nodes[v].fail = 0;
+	//			q.push(v);
+	//		}
+	//	}
+	//	while(!q.empty()) {
+	//		int u = q.front();
+	//		q.pop();
+	//		for(int i = 0; i < 26; ++i) {
+	//			int v = nodes[u].nxt[i];
+	//			if(v == -1) {
+	//				continue;
+	//			}
+	//			int f = nodes[u].fail;
+	//			while(f != 0 && nodes[f].nxt[i] == -1) {
+	//				f = nodes[f].fail;
+	//			}
+	//			nodes[v].fail = max(0, nodes[f].nxt[i]);
+	//			q.push(v);
+	//		}
+	//	}
+	// }
+	// int query(const string &str) const {
+	//	vector<int> cnter(nodes.size(), 0);
+	//	int now = 0;
+	//	for(char ch : str) {
+	//		int id = ch - 'a';
+	//		while(now != 0 && nodes[now].nxt[id] == -1) {
+	//			now = nodes[now].fail;
+	//		}
+	//		now = max(nodes[now].nxt[id], 0);
+	//		int v = now;
+	//		while(v != 0) {
+	//			cnter[v] = nodes[v].cnt;
+	//			v = nodes[v].fail;
+	//		}
+	//	}
+	//	int ans = 0;
+	//	for(int i : cnter) {
+	//		ans += i;
+	//	}
+	//	return ans;
+	// }
 	void build() {
 		queue<int> q;
 		nodes[0].fail = 0;
@@ -3035,6 +3084,90 @@ vector<int> height(const string &str) {
 	}
 	return h;
 }
+```
+
+
+
+
+
+### 序列自动机
+```c++
+struct SeqAM {
+	SeqAM(const string &str)
+	    : n(str.size()), nxt(str.size() + 1, [&] {
+		      array<int, 26> ret;
+		      ret.fill(str.size());
+		      return ret;
+	      }()) {
+		for(int i = n - 1; i >= 0; --i) {
+			nxt[i] = nxt[i + 1];
+			nxt[i][str[i] - 'a'] = i;
+		}
+	}
+	bool match(const string &str) const {
+		int pos = 0;
+		for(char ch : str) {
+			pos = nxt[pos][ch - 'a'];
+			if(pos == n)
+				return false;
+			pos++;
+		}
+		return true;
+	}
+private:
+	int n;
+	vector<array<int, 26>> nxt;
+};
+```
+
+### 回文自动机
+```c++
+struct PAM {
+	PAM() : s("#"), last(1) {
+		nodes.emplace_back(-1, 0);
+		nodes.emplace_back(0, 0);
+	}
+	int insert(char ch) {
+		s += ch;
+		int pos = s.size() - 1;
+		int p = last, id = ch - 'a';
+		while(s[pos - nodes[p].len - 1] != ch) {
+			p = nodes[p].fail;
+		}
+		if(nodes[p].nxt[id] == -1) {
+			int cur = nodes.size();
+			nodes[p].nxt[id] = cur;
+			nodes.emplace_back(nodes[p].len + 2, 0);
+			if(nodes[cur].len == 1) {
+				nodes[cur].fail = 1;
+			} else {
+				int f = nodes[p].fail;
+				while(s[pos - nodes[f].len - 1] != ch) {
+					f = nodes[f].fail;
+				}
+				nodes[cur].fail = nodes[f].nxt[id];
+			}
+			if(nodes[cur].len == 1) {
+				nodes[cur].cnt = 1;
+			} else {
+				nodes[cur].cnt = nodes[nodes[cur].fail].cnt + 1;
+			}
+		}
+		last = nodes[p].nxt[id];
+		return nodes[last].cnt;
+	}
+private:
+	struct Node {
+		int len, fail, cnt;
+		array<int, 26> nxt;
+		Node(int l, int f) : len(l), fail(f), cnt(0) {
+			nxt.fill(-1);
+		}
+	};
+	vector<Node> nodes;
+	string s;
+	int last;
+};
 ```
 
 ## 贪心
@@ -3304,6 +3437,7 @@ private:
 				carry = 1;
 				a[i] -= 10;
 			}
+			++i;
 		}
 	}
 	static void _sub(vector<int> &a, const vector<int> &b) {
