--- a/板子.md
+++ b/板子.md
@@ -89,6 +89,8 @@ int main() {
   - [AC自动机](#ac自动机)
   - [后缀数组](#后缀数组)
   - [Height数组](#height数组)
+  - [序列自动机](#序列自动机)
+  - [回文自动机](#回文自动机)
 - [贪心](#贪心)
   - [一组交叉直线经过所有点](#一组交叉直线经过所有点) 
 - [二分](#二分)
