增加了后缀自动机算法和整除分块算法，改了点常用的tarjan让它们更好用

--- a/板子.md
+++ b/板子.md
@@ -72,6 +72,7 @@ int main() {
   - [组合数](#组合数)
   - [EXGCD](#exgcd)
   - [中国剩余定理](#中国剩余定理)
+  - [整除分块](#整除分块)
   - [斯特林数](#斯特林数)
   - [质数筛](#质数筛和它能干的事)
   - [多项式乘法](#多项式乘法)
@@ -93,6 +94,7 @@ int main() {
   - [AC自动机](#ac自动机)
   - [后缀数组](#后缀数组)
   - [Height数组](#height数组)
+  - [后缀自动机](#后缀自动机)
   - [序列自动机](#序列自动机)
   - [回文自动机](#回文自动机)
 - [贪心](#贪心)
@@ -2299,6 +2301,21 @@ pair<ll, ll> crt(const vector<ll> &rem, const vector<ll> &mod) {
 }
 ```
 
+### 整除分块
+```c++
+ll intdiv(ll n) {
+    ll ans = 0;
+	for(ll b = 1; b <= n;) {
+		ll val = n / b;
+		ll r = n / val;
+		ll len = r - b + 1;
+		ans = (ans + (len % modulo * val % modulo)) % modulo;
+		b = r + 1;
+	}
+    return ans;
+}
+```
+
 ### 二项式反演公式
 $ \displaystyle f(n) = \sum_{k=0}^{n} \binom{n}{k} g(k) \rightarrow g(n) = \sum_{k=0}^{n} (-1)^{n-k} \binom{n}{k} f(k) $
 
@@ -3252,7 +3269,94 @@ vector<int> height(const string &str) {
 }
 ```
 
-
+### 后缀自动机
+```c++
+struct SAM {
+	SAM() : nodes(1, Node(-1, 0)), last(0) {}
+	void insert(char ch) {
+		const int id = ch - 'a';
+		const int cur = nodes.size();
+		nodes.emplace_back(-1, nodes[last].len + 1);
+		int p = last;
+		while(p != -1 && nodes[p].nxt[id] == -1) {
+			nodes[p].nxt[id] = cur;
+			p = nodes[p].link;
+		}
+		if(p == -1) {
+			nodes[cur].link = 0;
+		} else {
+			int q = nodes[p].nxt[id];
+			if(nodes[p].len + 1 == nodes[q].len) {
+				nodes[cur].link = q;
+			} else {
+				int clone = nodes.size();
+				nodes.emplace_back(nodes[q].link, nodes[p].len + 1);
+				nodes[clone].nxt = nodes[q].nxt;
+				while(p != -1 && nodes[p].nxt[id] == q) {
+					nodes[p].nxt[id] = clone;
+					p = nodes[p].link;
+				}
+				nodes[q].link = nodes[cur].link = clone;
+			}
+		}
+		last = cur;
+		ends.push_back(cur);
+	}
+	ll solve() const {
+		int n = nodes.size();
+		vector<int> indeg(n, 0), topoorder;
+		topoorder.reserve(n);
+		for(int i = 0; i < n; ++i) {
+			if(nodes[i].link != -1) {
+				indeg[nodes[i].link]++;
+			}
+		}
+		queue<int> q;
+		for(int i = 0; i < n; ++i) {
+			if(indeg[i] == 0) {
+				q.push(i);
+			}
+		}
+		while(!q.empty()) {
+			int u = q.front();
+			q.pop();
+			topoorder.push_back(u);
+			if(nodes[u].link != -1) {
+				indeg[nodes[u].link]--;
+				if(indeg[nodes[u].link] == 0) {
+					q.push(nodes[u].link);
+				}
+			}
+		}
+		ll ans = 0;
+		vector<ll> occur(n, 0);
+		for(int e : ends) {
+			occur[e] = 1;
+		}
+		for(int i : topoorder) {
+			if(nodes[i].link != -1) {
+				occur[nodes[i].link] += occur[i];
+			}
+			if(occur[i] != 1) {
+				ans = max(ans, occur[i] * nodes[i].len);
+			}
+		}
+		return ans;
+	}
+private:
+	struct Node {
+		array<int, 26> nxt;
+		int link;
+		int len;
+		Node(int lk, int ln) : link(lk), len(ln) {
+			nxt.fill(-1);
+		}
+	};
+	vector<Node> nodes;
+	vector<int> ends;
+	int last;
+};
+```
 
 
 
